syntax = "proto3";

option csharp_namespace = "Airport.gRPC";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

service Airport{
	rpc GetDistanceBetweenAirportsByIATA(GetAirportRequest) returns (AirportReponse);
}

message GetAirportRequest{
	 string FirstAirportIATA=1;
	 string SecondAirportIATA=2;
}
message AirportReponse{
	string FirstAirportName=1;
	string SecondAirportName=2;
	string Distance=3;
}